[tool.poetry]
name = "aioping3"
version = "0.1.0"
description = "Ported ping3 from sync to async with SDK improvements"
authors = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async_timeout = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

